PROJECT(madgt9x)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/${PROJECT_NAME}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/${PROJECT_NAME}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/${PROJECT_NAME}/bin)

include(./chal_export/flags.cmake)

SET(CMAKE_C_COMPILER arm-zephyr-eabi-gcc)

INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(./chal_export/include/)

ADD_COMPILE_OPTIONS(${C_FLAGS})

SET(LIBMADGT9X_SRC mad_gt9x.c)
ADD_LIBRARY(madgt9x STATIC ${LIBMADGT9X_SRC})

INSTALL( FILES ${CMAKE_SOURCE_DIR}/mad_gt9x.h
         DESTINATION ${CMAKE_BINARY_DIR}/output/${PROJECT_NAME}/inc)